--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <script>
         /**
         * SCF_GATEWAY：SCF 云函数网关地址
-        * SITE_NAME：学渣世界
+        * SITE_NAME：WhatEver
         */
         window.GLOBAL_CONFIG = {
             SCF_GATEWAY: "https://teamspirit.xb.workers.dev/",
-            SITE_NAME: "渣生渣世",
+            SITE_NAME: "DoEvil",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
